samples/_failures_safe/1760887216_bb80e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ae71b93.c: In function ‘main’:
./samples/SAFE/__tmp_2ae71b93.c:158:12: error: expected declaration or statement at end of input
  158 |     struct ParserState state;
      |            ^~~~~~~~~~~
